--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head> 
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sorteador</title>
@@ -11,10 +11,10 @@
 </head>
 <body>
     <main>
-        <h1>Sorteador</h1>
+        <h1>Sorteador Fácil</h1>
         <form id="form-sorteador">
             <div>
-                <label for="numero-maximo">Número máximo</label>
+                <label for="numero-maximo">Número máximo:</label>
                 <input type="number" id="numero-maximo" required min="2" value="2" step="1">
             </div>
             <button type="submit">Sortear número</button>
